--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="product-list">
             <div class="product-card">
-                <img src="assets/img/1.jpg" alt="Product 1 Image 1">
+                <img src="assets/img/1.jpg" alt="ماگ سرامیکی طرح نیسان جی تی آر">
                 <div class="content">
                     <span>
                         <p class="card-title">ماگ سرامیکی طرح نیسان جی تی آر</p>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="product-card">
-                <img src="assets/img/2.jpg" alt="Product 2 Image 1">
+                <img src="assets/img/2.jpg" alt="ماگ سرامیکی طرح کوهستان">
                 <div class="content">
                     <span>
                         <p class="card-title">ماگ سرامیکی طرح کوهستان</p>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="product-card">
-                <img src="assets/img/3.jpg" alt="Product 3 Image 1">
+                <img src="assets/img/3.jpg" alt="ماگ سرامیکی طرح گاو و کوه سیاه و سفید">
                 <div class="content">
                     <span>
                         <p class="card-title">ماگ سرامیکی طرح گاو و کوه سیاه و سفید </p>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="product-card">
-                <img src="assets/img/4.jpg" alt="Product 4 Image 1">
+                <img src="assets/img/4.jpg" alt="ماگ سرامیکی طرح گاو و کوه رنگی">
                 <div class="content">
                     <span>
                         <p class="card-title">ماگ سرامیکی طرح گاو و کوه رنگی</p>
