--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحه خرید ماگ</title>
+    <title>صفحه ماگ و لیوان</title>
     <meta name="description" content="خرید انواع ماگ سرامیکی و لیوان با بهترین قیمت و کیفیت.">
     <link rel="icon" type="image/png" href="/assets/img/logo-s.png">
     <link rel="stylesheet" href="assets/css/style.css">
